# jsopt

./: .gitignore  README.md  pyproject.toml
docs/01-plan/features/: jsopt.plan.md
docs/02-design/: fdtdx-backend-adapter.design.md  julia-fdtd-backend.design.md
examples/: adjoint_intro_gradient_check.py  fdtdx_callback_skeleton.py  toy_quadratic.py
jsopt/: __init__.py  callbacks.py  optimizer.py
jsopt/adapters/: __init__.py  fdtdx_adapter.py
notebooks/: adjoint_intro_gradient_check.ipynb  fdtdx_colab_gpu_result.ipynb  fdtdx_colab_gradient_smoke.py  fdtdx_colab_optimizer_visual.py  fdtdx_colab_smoke.ipynb  fdtdx_cpu_result.ipynb
results/colab_gpu/: execution_summary.md
results/cpu/: execution_summary.md
results/gradient_check/adjoint_intro_style/: execution_summary.md
sources/: research_fdtdx_claude_skill_20260603.md  research_julia_fdtd_20260603.md
tests/: test_callbacks.py  test_fdtdx_adapter.py  test_optimizer.py
