[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsopt"
version = "0.1.0"
description = "Backend-agnostic photonic inverse-design optimization utilities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
fdtdx = [
  "fdtdx>=0.6.2",
]
test = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["jsopt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
